fix when not showing inactive, fix main.css

--- a/css/main.css
+++ b/css/main.css
@@ -109,4 +109,7 @@ table.admintable>thead>tr>th, .table.admintable>thead>tr>th, table.admintable>tb
   padding: 3px;
 }
 
+.btn-xsm, .btn-group-xsm>.btn {
+  padding: 0px 0px 0px;
+}
 
